# Sable-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  add submodules.bat  build.sh  imgui.ini
engine/: CMakeLists.txt
engine/include/: AssetManager.h  SableEngine.h
engine/include/SB/: AssetManager.h  Component.h  DebugLog.h  ECS.h  Entity.h  Mesh.h  Object.h  ProjectManager.h  SB_VkCore.h  SableEngine.h  Scene.h  Utils.h
engine/shaders/: shader.vert  vert.spv
engine/src/: AssetManager.cpp  DebugLog.cpp  ECS.cpp  Entity.cpp  Mesh.cpp  Object.cpp  ProjectManager.cpp  SB_VkCore.cpp  SableEngine.cpp  Scene.cpp  Utils.cpp
projects/: test.sbproj  test1.sbproj
projects/test/meshes/: suzanne.fbx
sable/: CMakeLists.txt
sable/src/: App.cpp  App.h  main.cpp
shaders/: compile.bat
src/: App.cpp  App.h  ConsoleDisplay.cpp  ConsoleDisplay.h  FileBrowser.cpp  FileBrowser.h  ProjectManager.cpp  ProjectManager.h  SceneViewer.cpp  SceneViewer.h  Utils.cpp  Utils.h  app.cpp  app.h  filebrowser.cpp  filebrowser.h  main.cpp  utils.cpp
